--- a/config.ini
+++ b/config.ini
@@ -17,3 +17,6 @@ LINK_FILE_EXTENSIONS = .mkv,.mp4,.avi,.flv,.wmv,.mov,.rm,.rmvb,.asf,.divx,.mpg,.
 
 # 文件扩展名，这些文件应被复制
 COPY_FILE_EXTENSIONS = .nfo,.xml,.srt,.ass,.ssa,.sub,.idx,.smi,.txt,.jpg,.jpeg,.png,.gif,.bmp,.tif,.tiff,.webp,.psd,.xcf
+
+# 轮询时间间隔，单位为秒
+POLLING_INTERVAL = 10
