--- a/config.ini
+++ b/config.ini
@@ -2,15 +2,15 @@
 # 指定要监控的源目录
 SOURCE_DIR = /path/to/your/source_directory
 
-# 指定符号链接或复制文件要放置的目标目录
+# 指定软链接或复制文件要放置的目标目录
 DEST_DIR = /path/to/your/destination_directory
 
 # 指定日志文件的存放位置
 LOG_PATH = /path/to/your/log_directory_or_file
 
 [settings]
-# 如果为True，则使用PollingObserver，这对某些不支持普通Observer的文件系统有帮助
-compatibility_mode = False
+# 当设置为True时，程序将使用轮询的方式来检测文件系统变化，这种方式在某些不支持原生文件系统事件的系统上是必要的。当设置为False时，程序将使用默认的文件系统事件监听器，这通常在大多数系统上运作得更好且更高效。监控目录为挂载网盘时可以设置为True
+compatibility_mode = True
 
 # 文件扩展名，这些文件应被创建为软链接
 LINK_FILE_EXTENSIONS = .mkv,.mp4,.avi,.flv,.wmv,.mov,.rm,.rmvb,.asf,.divx,.mpg,.mpeg,.m4v,.webm,.ogg,.ogv,.3gp,.3g2,.aac,.flac,.wav,.mp3,.m4a,.opus,.wma,.vob,.ts
